--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -6,20 +6,23 @@
 +AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 +AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
 +AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
-+AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
-+AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
-+AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
-+AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
-+AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
-+AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
 bUseMouseForTouch=False
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Use",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Use",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="TurnAtRate",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="LookUpAtRate",Key=Gamepad_RightY,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="TurnAtRate",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="LookUpAtRate",Key=MouseY,Scale=-1.000000)
 bShowConsoleOnFourFingerTap=true
 bShowConsoleOnFourFingerTap=False
+ConsoleKey=None
++ConsoleKeys=Tilde
 
 
